Fix sidebar causing overflow on root element

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,3 +1,7 @@
+:root {
+  overflow-x: hidden;
+}
+
 p {
   margin: 0;
 }
